--- a/src/content/fiches/fr/REIPRO_001_bien-quantifier-le-besoin.mdx
+++ b/src/content/fiches/fr/REIPRO_001_bien-quantifier-le-besoin.mdx
@@ -14,7 +14,7 @@ responsible:
   - responsible: src/content/personas/fr/architecte-logicieldeveloppeur.mdx
   - responsible: src/content/personas/fr/poamoa.mdx
 lifecycle: 1-specification
-rgesn: 3.2
+rgesn: '3.2'
 environmental_impact: 1
 priority_implementation: 1
 moe: 3
