--- a/src/content/fiches/fr/REIPRO_003_minimiser-le-nombre-de-developpements-specifiques.mdx
+++ b/src/content/fiches/fr/REIPRO_003_minimiser-le-nombre-de-developpements-specifiques.mdx
@@ -14,7 +14,7 @@ responsible:
   - responsible: src/content/personas/fr/architecte-logicieldeveloppeur.mdx
   - responsible: src/content/personas/fr/poamoa.mdx
 lifecycle: 1-specification
-rgesn: 1.1
+rgesn: '1.1'
 environmental_impact: 1
 priority_implementation: 2
 moe: 2
