--- a/src/content/fiches/fr/REIPRO_004_supprimer-les-developpements-specifiques-inclus-dans-les-nouveaux-standards.mdx
+++ b/src/content/fiches/fr/REIPRO_004_supprimer-les-developpements-specifiques-inclus-dans-les-nouveaux-standards.mdx
@@ -14,7 +14,7 @@ responsible:
   - responsible: src/content/personas/fr/architecte-logicieldeveloppeur.mdx
   - responsible: src/content/personas/fr/poamoa.mdx
 lifecycle: 6-support
-rgesn: 2.7
+rgesn: '2.7'
 environmental_impact: 2
 priority_implementation: 3
 moe: 3
