--- a/src/content/fiches/fr/REIPRO_006_lisser-la-charge.mdx
+++ b/src/content/fiches/fr/REIPRO_006_lisser-la-charge.mdx
@@ -14,7 +14,7 @@ responsible:
   - responsible: src/content/personas/fr/architecte-logicieldeveloppeur.mdx
   - responsible: src/content/personas/fr/codeuseur-developpeuser.mdx
 lifecycle: 3-developement
-rgesn: 3.2
+rgesn: '3.2'
 environmental_impact: 3
 priority_implementation: 3
 moe: 3
