--- a/src/content/fiches/fr/REIPRO_007_minimiser-les-ressources-necessaires-au-projet.mdx
+++ b/src/content/fiches/fr/REIPRO_007_minimiser-les-ressources-necessaires-au-projet.mdx
@@ -15,7 +15,7 @@ responsible:
   - responsible: src/content/personas/fr/architecte-logicieldeveloppeur.mdx
   - responsible: src/content/personas/fr/codeuseur-developpeuser.mdx
 lifecycle: 2-concept
-rgesn: 4.8, 5.1, 5.7
+rgesn: '4.8, 5.1, 5.7'
 environmental_impact: 2
 priority_implementation: 3
 moe: 4
