--- a/src/content/fiches/fr/REIPRO_008_supprimer-les-conteneurs-qui-ne-sont-plus-utiles.mdx
+++ b/src/content/fiches/fr/REIPRO_008_supprimer-les-conteneurs-qui-ne-sont-plus-utiles.mdx
@@ -13,7 +13,7 @@ people: NA
 responsible:
   - responsible: src/content/personas/fr/codeuseur-developpeuser.mdx
 lifecycle: 3-developement
-rgesn: 2.7
+rgesn: '2.7'
 environmental_impact: 3
 priority_implementation: 3
 moe: 4
