--- a/src/content/fiches/fr/RWP_1.05-choisir-entre-wordpress-org-et-wordpress-com.mdx
+++ b/src/content/fiches/fr/RWP_1.05-choisir-entre-wordpress-org-et-wordpress-com.mdx
@@ -36,7 +36,7 @@ Il existe sur le marché 2 WordPress en apparence semblables, mais finalement as
 - [WordPress.org](https://fr.wordpress.org/)
 - [WordPress.com](https://wordpress.com/fr/)
 
-Nous souhaitons attirer votre attention sur ces deux formules pour vous permettre de faire un choix éclairé sur les différents points de divergence en fonction de votre besoin. Sachez toutefois que l'ensemble est basé sur le même logiciel \[\[open source]] WordPress, c'est-à-dire le \[\[cms|CMS]] comprenant tous les fichiers nécessaires pour la construction d'un site et même si WordPress est rapide et pratique, car il permet un gain de temps pour créer son site internet, il est cependant pointé du doigt comme étant un système potentiellement très polluant.
+Nous souhaitons attirer votre attention sur ces deux formules pour vous permettre de faire un choix éclairé sur les différents points de divergence en fonction de votre besoin. Sachez toutefois que l'ensemble est basé sur le même logiciel \[\[open-source]] WordPress, c'est-à-dire le \[\[cms|CMS]] comprenant tous les fichiers nécessaires pour la construction d'un site et même si WordPress est rapide et pratique, car il permet un gain de temps pour créer son site internet, il est cependant pointé du doigt comme étant un système potentiellement très polluant.
 
 ### WordPress.com, la solution propriétaire
 
